# enowars8-service-onlyflags

./: LICENSE  README.md  flake.nix  todo.md
.github/workflows/: enochecker_test.yml
assets/: flag_ad.xcf  login.php  logo.xcf  topology.dot
assets/extern_ads/: sceam1.xcf
checker/: Dockerfile  checker.py  docker-compose.yml  gunicorn.conf.py  jwt_priv.pem  pyproject.toml  sharing.py
documentation/: README.md  only_exp_0.py  only_exp_1.py
scripts/: deploy_perma.sh
service/: .gitignore  docker-compose.yml  init.sql
service/echo/src/: main.rs
service/forum/: Cargo.toml
service/forum/.sqlx/: query-2eda14844a8f720caafd96070acc449f80c015362b182cab439dc88dde5f7894.json  query-3a1f2c2d9e5b9e3ab6391ae8f5b86031e1b379f18a0fba4a4ce2614f9f9766df.json  query-7902d2391b82874811fdd3f2b5c0c3df9ec54685a72e81774531fe84a10dfbfa.json  query-928e16662097619b0a5bc9934bc80861125f345476b361e827d61d1f9c0491e1.json  query-a01e02ba079e767206b4ac07f6da5ec81fb441438bc8f7fc3641a7df631b8ea7.json  query-b2eb3520fc37b41c237298d7bb1f0c94fb427263068a28aba3d2574112467a5b.json  query-ce77581182e71c926d27dd6ae3eef7b536d930d28e01e0e2742e5683f1ee4662.json  query-d3945549da7d2474997c78c75fb3f96da465f91fb580783f04a2945effb44f16.json
service/forum/src/: main.rs
service/proxy/: Dockerfile  entrypoint.sh  mix.exs
service/proxy/config/: config.exs
service/proxy/lib/: proxy.ex
service/proxy/lib/proxy/: application.ex  cleaner.ex  user_cache.ex
service/web/: Dockerfile  header.php
service/web/html/: index.php  keygen.php  license.php
service/web/html/assets/: style.css
service/web/src/: index.php
services/proxy/: Dockerfile  mix.exs
services/proxy/lib/: proxy.ex
