[tool.poetry]
name = "onlyflags_checker"
version = "0.1.0"
description = ""
authors = ["Alexander Gaus <unreal@rtinf.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
enochecker3 = "^0.8.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
python-socks = {extras = ["asyncio"], git = "https://github.com/RTUnreal/python-socks.git", branch = "test_failure"} # version = "^2.5.0"}
beautifulsoup4 = "^4.12.3"

# for secret sharing
pycryptodome = "^3.20.0"

[tool.poetry.group.dev.dependencies]
enochecker-cli = "^0.7.0"
enochecker-test = "^0.9.0"
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.10.0"

types-beautifulsoup4 = "^4.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
