[package]
name = "forum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
lazy_static = "1.4.0"
regex = "1.10.5"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
